--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
     
 </head>
 <body style="margin-top: 20px;">
+   
+   <div class="loading-page"></div>
+   
     <div class="container">
         <div class="row">
-            <div class="col-xs-4"></div>
+            <div class="col-xs-4">
+                <img src="static/images/logo.png" alt="ND Logo" class="header-logo">
+            </div>
             <div class="col-xs-8 text-right">
                 <div class="row text-right">
                     <span style="font-size: 32px; font-family: serif;">Nick Daniel</span>
@@ -21,7 +26,9 @@
                     <span style="font-size: 24px; font-family: monospace;">FRONT-END NINJA</span>
                 </div>
             </div>
-            
+            <div class="col-xs-12">
+                <hr class="box-shadow">
+            </div>
         </div>
         <div class="row">
             <div class="col-xs-12" style="min-height: 400px; background-color: #ccc;">
@@ -34,6 +41,7 @@
                 <hr>
             </div>
         </div>
+        <div class="loading-page"></div>
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"><div class="well"></div></div>
             <div class="col-xs-4 col-md-4 col-sm-12 col-xs-12"><div class="well"></div></div>
@@ -41,4 +49,7 @@
         </div>
     </div>
 </body>
+<script src="static/bower_components/jquery/dist/jquery.min.js"></script>
+<script src="static/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="static/js/portfolio.js"></script>
 </html>
