--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>NAd | Developer</title>
     
     <link rel="stylesheet" href="static/bower_components/bootstrap/dist/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="static/bower_components/font-awesome/css/font-awesome.min.css" type="text/css">
