added style and images

--- a/index.html
+++ b/index.html
@@ -31,25 +31,42 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12" style="min-height: 400px; background-color: #ccc;">
-              <!-- add large image -->  
+            <div class="jumbotron">
+              <div class="container text-center">
+                 <h1>Walk with me</h1>
+                    <h3>across</h3>
+                    <h3>the bridge to <strong>SUCCESS...</strong></h3>
+              </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-12 text-center">
                 <h1>Featured Work</h1>
                 <hr>
             </div>
         </div>
-        <div class="loading-page"></div>
         <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"><div class="well"></div></div>
-            <div class="col-xs-4 col-md-4 col-sm-12 col-xs-12"><div class="well"></div></div>
-            <div class="col-xs-4 col-md-4 col-sm-12 col-xs-12"><div class="well"></div></div>
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" >
+               <div class="image-container">
+                   <img src="static/images/legaltec-dashboard.png" alt="LegalTec" class="img-responsive">
+                    <div class="after">This is some content</div>
+                </div>
+               </div>
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+               <div class="well feature">
+                    <img src="static/images/legaltec-mdf.png" alt="LegalTec" height="100%" width="100%">
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+               <div class="well feature">
+                </div>
+            </div>
         </div>
     </div>
 </body>
 <script src="static/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="static/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="static/js/portfolio.js"></script>
+
+
 </html>
