--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
         <!-- Page Load gif and overlay -->
        <div class="loading-page"></div>
          <md-toolbar>
-               <div flex><span class="name">Nick Daniel</span></div>
+                <div class="md-toolbar-tools md-padding">
+                    <md-button class="md-primary" aria-label="Featured Work" href="#featured" du-smooth-scroll du-scrollspy>
+                      Featured Work
+                    </md-button>
+                 </div>
            </md-toolbar>
-        <div class=" md-margin md-padding">
+        <div class="md-margin md-padding">
             <div layout>
                 <div flex>
                     <img src="static/images/logo.png" alt="ND Logo" class="header-logo">
@@ -32,71 +36,53 @@
                     </div>
                 </div>
             </div>
-            <div  layout>
-                    <div flex>
-                        <hr class="box-shadow">
+            <div layout>
+                <div flex="100" class="md-padding">
+                    <md-divider></md-divider>
+                </div>
+            </div>
+            <section layout class="opening-image">
+                <div id="overlay"></div>
+                    <div layout layout-align="center center" class="md-padding">
+                        <div flex class="text-container">
+                            <h1 class="img-text">Walk with me</h1>
+                            <h3 class="img-text">across</h3>
+                            <h3 class="img-text">the bridge to <strong>SUCCESS...</strong></h3>
+                         </div>
+                    </div>
+            </section>
+                <div layout>
+                    <div flex class="text-center" id="featured">
+                        <h1 class="md-headline">Featured Work</h1>
+                            <md-divider></md-divider>
                     </div>
                 </div>
-            <div layout>
-                <div class="jumbotron">
-                  <div class="container">
-                    <div id="overlay"></div>
-                    <div flex class="text-container">
-                        <h1 class="img-text">Walk with me</h1>
-                        <h3 class="img-text">across</h3>
-                        <h3 class="img-text">the bridge to <strong>SUCCESS...</strong></h3>
-                     </div>
-                  </div>
-                </div>
-            </div>
-            <div layout>
-                <div flex class="text-center">
-                    <h1 class="md-headline">Featured Work</h1>
-                    <hr>
-                </div>
-            </div>
-            <div layout-lg="row" layout-md="row" layout-sm="column">
-               <md-whiteframe flex class="md-whiteframe-6dp md-margin md-padding">
-                  <div flex>
-                       <img src="static/images/legaltec-dashboard.png" alt="Legaltec Dashboard" width="350px">
-                  </div>
-                <div flex>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti laboriosam nostrum, blanditiis vero neque pariatur doloribus quibusdam impedit, nam soluta magnam sunt natus fugiat ducimus expedita tempora amet aut assumenda?
-                </div>
-               </md-whiteframe>
-               <md-whiteframe flex class="md-whiteframe-6dp md-margin md-padding">
-                   <img src="static/images/legaltec-dashboard.png" alt="Legaltec Dashboard" width="350px">
-               </md-whiteframe>
-               <md-whiteframe flex class="md-whiteframe-6dp md-margin md-padding">
-                   <img src="static/images/legaltec-dashboard.png" alt="Legaltec Dashboard" width="350px">
-               </md-whiteframe>
-            </div>
-            <div layout>
-                    <md-card flex>
-                        <nvd3 options="options" data="data"></nvd3>
-                    </md-card>
-            </div>
+            <section layout-lg="row" layout-md="row" layout-sm="column">
+                <md-card flex ng-repeat="item in main.featuredWork">
+                    <div flex class="text-center">
+                       <span class="md-headline">{{ item.title }}</span>
+                    </div>
+                    <div flex class="md-padding">
+                        <img ng-src="{{item.image}}" class=" img-responsive" alt="Washed Out">
+                    </div>
+                    <md-card-actions layout="row" layout-align="end center">
+                        <md-button class="md-raised md-accent" aria-label="Learn More" ng-click="main.learnMore1()">
+                          learn more
+                        </md-button>
+                        <md-button class="md-raised md-accent" aria-label="Learn More" ng-click="main.learnMore1()">
+                              learn more
+                        </md-button>
+                    </md-card-actions>
+                </md-card>
+            </section>
         </div>
     </body>
-    <!--body>
-       <div class="loading-page"></div>
-            <md-toolbar class="md-padding">
-                <div layout>
-                    <div flex>
-                        <img src="static/images/logo.png" alt="ND Logo" class="header-logo">
-                    </div>
-                    <div flex layout="column" layout-align="end end">
-                        <div flex><span class="md-headline name">Nick Daniel</span></div>
-                        <div flex><span class="md-subhead speciality">Front-End Developer</span></div>
-                    </div>
-                </div>
-            </md-toolbar>
-    </body-->
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-scroll/1.0.0/angular-scroll.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.1/nv.d3.min.js"></script>
         <script src="https://rawgit.com/krispo/angular-nvd3/v1.0.5/dist/angular-nvd3.js"></script>
