--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                <div flex>
                    <img src="static/images/logo.png" alt="ND Logo" class="header-logo">
                </div>
-                <div flex layout-align="center center" hide-xs ng-show="{{name.length >= 3}}">
+                <div flex layout-align="center center" hide-xs ng-show="name.length >= 3">
                     <md-button class="md-primary" aria-label="Featured Work" href="#featured" du-smooth-scroll du-scrollspy>
                       Featured Work
                     </md-button>
